--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <script src="js/tailDT.js"></script>
 <script src="js/nouislider.min.js"></script>
 <script src="js/wNumb.js"></script>
-        <script src="data/Wegen_2.js"></script>
+        <script src="js/external-link-button.js"></script>
+		<script src="data/Wegen_2.js"></script>
         <script src="data/Gebruiksfunctie_3.js"></script>
         <script src="data/Ontwerp_4.js"></script>
         <script src="data/Kansen_5.js"></script>
